BBB-744 fixed safari search alignment issue

--- a/src/main/resources/assets/sass/patterns/dft/_search.scss
+++ b/src/main/resources/assets/sass/patterns/dft/_search.scss
@@ -10,11 +10,11 @@
 		@include govuk-font(16, regular);
 		border: 2px solid govuk-colour("grey-3");
 		margin-bottom: 10px;
-		margin-top: 2px;
 
 		@include govuk-media-query(tablet) {
 			float: left;
 			width: 135px;
+			margin-top: 2px;
 			margin-right: 5px;
 			margin-bottom: 0;
 		}
@@ -26,7 +26,7 @@
 
 		@include govuk-media-query(tablet) {
 			width: auto;
-			display: inline-block;
+			float: left;
 		}
 	}
 
